--- a/styles/store.css
+++ b/styles/store.css
@@ -78,7 +78,7 @@ margin: 0;
 .grids {
     width: 94%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr 1fr 1fr; /* se renderizaran 3 columnas ya que hay 3 valores, cada columna ocupa 1 fraccion, 1/3 (33,3% cada columna) se podria poner 33% 33% 33% por ejemplo   */
     gap: 20px; 
     border-radius: 5px;
     margin: 5px auto;
