--- a/styles/store.css
+++ b/styles/store.css
@@ -78,7 +78,8 @@ margin: 0;
 .grids {
     width: 94%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr; /* se renderizaran 3 columnas ya que hay 3 valores, cada columna ocupa 1 fraccion, 1/3 (33,3% cada columna) se podria poner 33% 33% 33% por ejemplo   */
+    grid-template-columns: 1fr; /* se renderizaran 3 columnas ya que hay 3 valores, cada columna ocupa 1 fraccion, 1/3 (33,3% cada columna) se podria poner 33% 33% 33% por ejemplo
+                                    IMPORTANTE: EN ESTE CASO SE RENDERIZA 1 COLUMNA, PARA QUE SE RENDERIZEN 3 ESTA EL MEDIA QUERY PARA WIDTH MAYORE A 1200PX*/
     gap: 20px; 
     border-radius: 5px;
     margin: 5px auto;
