--- a/styles/store.css
+++ b/styles/store.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 body {
     background-color: #191919;
     font-family: "Inter", sans-serif;
@@ -49,10 +50,8 @@ li {
 
 .logoNav {
     height: 80px;
-    width: 120px;
-    margin: 90px; 
-    margin-top: 105px;
-    overflow: hidden;
+    width: auto;
+    margin-left: 20px;
 }
 
 .title{
@@ -112,6 +111,31 @@ margin: 0;
     box-sizing: border-box;
 }
 }
+ 
+/*GRID PARA LOS 2 ULTIMOS ELEMENTOS*/
+.grid2 {
+    width: 94%;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px; 
+    border-radius: 5px;
+    margin: 5px auto;
+    box-sizing: border-box;
+}
+@media (width > 700px ) {
+    .grid2 {
+    width: 94%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    gap: 20px; 
+    border-radius: 5px;
+    margin: 5px auto;
+    box-sizing: border-box;
+}
+}
+
+
 
 
 
@@ -122,6 +146,15 @@ margin: 0;
 .item {
     transition: transform 0.3s ease;
 }
+
+.grid2 .item:hover {
+    transform: scale(1.03);
+}
+.grid2 .item {
+    margin-top: 10px;
+    transition: transform 0.3s ease;
+}
+
 
 img:hover {
     transform: scale(1.05);
@@ -154,13 +187,14 @@ button {
     transition: transform 0.3s ease;
     font-weight: bold;
     font-size: 1.1rem;
+    font-family: "Montserrat";
 
 }
 button:hover{
-    background-color: rgb(140, 247, 255);
-    color: black;
+    background-color: rgb(80, 176, 255);
+    color: white;
     font-weight: bold;
-    transform: scale(1.08);
+    transform: translateY(-2px);
     cursor: pointer;    
 }
 
@@ -277,3 +311,21 @@ svg:hover {
       }
   }
 
+
+  footer {
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    align-items: center;
+}
+
+footer a:hover {
+
+    transform: scale(1.05);
+}
+
+footer a:hover {
+transition: transform 0.3s ease;
+}
