--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,14 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 body {
     background-color: #191919;
     font-family: "Inter", sans-serif;
     color: white;
     font-weight: 600;
-    height: 200vh;
+    height: auto;
     width: 100%;
     padding: 0;
     margin: 0;
     overflow-x: hidden;
+}
+.logoNav {
+    height: 80px;
+    width: auto;
+    padding: 10px;
+    margin-left: 40px;
+    transition: transform 0.3s ease;
+}
+
+.logoNav:hover {
+    transform: scale(1.05);
 }
 
 .hero {
@@ -55,7 +67,7 @@ a {
 
 }
 
-li:hover {
+nav li:hover {
     transform: scale(1.1);
 }
 a:hover {
@@ -91,4 +103,43 @@ button {
     0% { transform: scale(1); }
     50% { transform: scale(1.05); }
     100% { transform: scale(1); }
+}
+
+
+.about {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 20px;
+    font-weight: 450;
+    text-align: center;
+    flex-direction: column;
+}
+
+.bottom {
+    height: 60vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+footer {
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    align-items: center;
+}
+
+footer a:hover {
+
+    transform: scale(1.05);
+}
+
+footer a:hover {
+transition: transform 0.3s ease;
 }
