--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@font-face {
+    font-family: 'Yearbook Solid';  
+    src: url('../fonts/YearbookSolid.woff2') format('woff2'),
+         url('../fonts/Yearbook Solid.ttf') format('truetype'); /* Fallback */
+    font-weight: normal;            
+    font-style: normal;              
+  }
 body {
     background-color: #191919;
     font-family: "Inter", sans-serif;
@@ -34,7 +41,7 @@ body {
 .bg-image {
     width: 100%;
     height: 90vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/images/foto-grupal.webp');
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/images/foto-grupal.jpg');
     filter: blur(.45px);
 }
 
@@ -112,10 +119,16 @@ button {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    gap: 50px;
     font-size: 20px;
     font-weight: 450;
     text-align: center;
     flex-direction: column;
+}
+
+.about h1 {
+    font-family: 'Yearbook Solid', sans-serif; 
+    font-size: 40px;
 }
 
 .bottom {
