--- a/styles/about.css
+++ b/styles/about.css
@@ -21,7 +21,8 @@ body {
     margin: 0;
     overflow-x: hidden;
     box-sizing: border-box;
-}
+
+    }
 
 nav,
 ul {
@@ -75,7 +76,7 @@ li {
 
 .quienesSomos {
     width: 100vw;
-    height: 80vh;
+    height: 65vh;
     margin: 0;
     padding: 0;
     display: flex;
@@ -146,9 +147,9 @@ footer a:hover {
 
 .img {
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.85);
-    height: 426px;
-    width: 904px;
-    border-radius: 15px;
+    height: 326px;
+    width: 804px;
+    border-radius: 10%;
     margin: 5px;
     object-fit: cover;
 }
@@ -233,7 +234,7 @@ footer a:hover {
 /* NUESTRO EQUIPO */
 .team {
     width: 100vw;
-    min-height: 70vh;
+    height: 70vh;
     margin: 0;
     padding: 0;
     display: flex;
@@ -241,7 +242,7 @@ footer a:hover {
     align-items: center;
     justify-content: flex-start;
     gap: 10%;
-    padding-top: 70px;
+    padding-top: 71px;
     overflow: hidden;
     background-color: #191919; /* Eliminado el aquamarine */
 }
@@ -353,3 +354,25 @@ footer a:hover {
         transition: 1s;
     }
 }
+
+
+.callToAction {
+    margin-top: 5%;
+    border-radius: 20px;
+    background-color: rgb(0, 100, 180);
+    color: white;
+    transition: transform 0.3s ease;
+    font-weight: bold;
+    font-size: 1.1rem;
+    font-family: "Montserrat";
+    padding: 15px;
+}
+
+.callToAction:hover {
+    background-color: rgb(80, 176, 255);
+    color: white;
+    font-weight: bold;
+    transform: translateY(-2px);
+    cursor: pointer;  
+}
+
