--- a/styles/store.css
+++ b/styles/store.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@font-face {
+    font-family: 'Yearbook Solid';
+    src: url('../fonts/YearbookSolid.woff2') format('woff2'),
+        url('../fonts/Yearbook Solid.ttf') format('truetype');
+    /* Fallback */
+    font-weight: normal;
+    font-style: normal;
+}
 body {
     background-color: #191919;
     font-family: "Inter", sans-serif;
@@ -10,6 +18,7 @@ body {
     padding: 0;
     margin: 0;
     overflow-x: hidden;
+    box-sizing: border-box;
 }
 
 nav, ul {
@@ -60,6 +69,11 @@ li {
     text-align: center;
     display: flex;
     justify-content: center;
+}
+
+.title1 {
+    font-family: 'Yearbook Solid', sans-serif; 
+    text-align: center ;
 }
 
 .item {
