--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,6 +38,12 @@ body {
     height: 60%;
  
 }
+
+.hero h1 {
+    font-family: 'Yearbook Solid', sans-serif; 
+    font-size: 50px;
+    text-align: center ;
+}
 .bg-image {
     width: 100%;
     height: 90vh;
