--- a/styles/inscripciones.css
+++ b/styles/inscripciones.css
@@ -266,3 +266,17 @@ textarea:focus {
     box-shadow: 0 0 0 1.5px rgb(140, 247, 255);
     outline: none;
 }
+
+.login {
+    background-color: rgb(0, 100, 180);
+    padding: 10px;
+    border-radius: 15px;
+    }
+    
+    .login:hover{
+        background-color: rgb(80, 176, 255);
+        color: white;
+        font-weight: bold;
+        transform: translateY(-2px);
+        cursor: pointer;    
+    }
