--- a/styles/styles.css
+++ b/styles/styles.css
@@ -168,3 +168,18 @@ footer a:hover {
 footer a:hover {
 transition: transform 0.3s ease;
 }
+
+
+.login {
+background-color: rgb(0, 100, 180);
+padding: 10px;
+border-radius: 15px;
+}
+
+.login:hover{
+    background-color: rgb(80, 176, 255);
+    color: white;
+    font-weight: bold;
+    transform: translateY(-2px);
+    cursor: pointer;    
+}
