--- a/styles/store.css
+++ b/styles/store.css
@@ -376,3 +376,52 @@ transition: transform 0.3s ease;
         transform: translateY(-2px);
         cursor: pointer;    
     }
+
+
+
+@media (max-width: 768px) {
+        /* Reducir el tamaño del título */
+        .title1 {
+            font-size: 1.5rem;
+            width: 70%;
+        }
+    
+        /* Reducir el tamaño de la barra de navegación */
+        nav, ul {
+            height: 8vh;
+            gap: 4%;
+            padding-right: 2%;
+        }
+    
+        a {
+            font-size: .8rem;
+            
+        }
+
+        .logoNav {
+            height: 60px;
+        }
+    
+        /* Ajustar la posición del carrito de compras */
+        .shoppingcart {
+            top: 15%; 
+            right: 8%; 
+        }
+    
+        #cart-count {
+            top: -10px; 
+            right: 5px;
+        }
+    }
+
+
+    @media (max-width: 568px) {
+        a {
+            font-size: .8rem;
+            
+        }
+        .login {
+            padding: 4px;
+            font-size: .5rem;
+        }
+    }
