--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,7 +47,7 @@ body {
 .bg-image {
     width: 100%;
     height: 90vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/images/foto-grupal.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/images/foto-grupal.png');
     filter: blur(.45px);
 }
 
@@ -58,10 +58,9 @@ nav, ul {
     align-items: center;
     justify-content: flex-end;
     gap: 6%;
-    background: linear-gradient(180deg, rgba(25, 25, 25, 0.95) 0%, rgba(25, 25, 25, 0.85) 50%, rgba(25, 25, 25, 0.7) 80%, rgba(70, 70, 70, 0.9) 100%);
+    background: linear-gradient(180deg, rgba(25, 25, 25, 0.95) 0%, rgba(25, 25, 25, 0.91) 20%, rgba(25, 25, 25, 0.85) 40%, rgba(25, 25, 25, 0.78) 60%, rgba(25, 25, 25, 0.7) 80%, rgba(99, 102, 99, 1.0) 98%);
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
-    border-bottom: 1px solid rgba(140, 247, 255, 0.1);
     font-family: "Inter", sans-serif;
     color: white;
     padding-right: 4.5%;
@@ -182,4 +181,52 @@ border-radius: 15px;
     font-weight: bold;
     transform: translateY(-2px);
     cursor: pointer;    
+}
+
+/*MEDIA QUERIES PARA EL NAV Y TITULO EN MOVIL*/
+@media (max-width: 768px) {
+    /* Reducir el tamaño del título */
+    .title1 {
+        font-size: 1.5rem;
+        width: 70%;
+    }
+
+    /* Reducir el tamaño de la barra de navegación */
+    nav, ul {
+        height: 8vh;
+        gap: 4%;
+        padding-right: 2%;
+    }
+
+    a {
+        font-size: 0.8rem;
+    }
+
+    .logoNav {
+        height: 60px;
+    }
+
+    /* Ajustar el botón de login */
+    a.login {
+        padding: 3px 3px;
+        border-radius: 10px;
+        gap: 1%;
+        background-color: transparent;
+    }
+    iframe {
+        width: 100%;
+        height: 230px;
+    }
+}
+
+@media (max-width: 568px) {
+    a {
+        font-size: 0.7rem;
+    }
+
+    .login {
+        padding: 4px 8px;
+
+        border-radius: 8px;
+    }
 }
