--- a/styles/store.css
+++ b/styles/store.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 @font-face {
     font-family: 'Yearbook Solid';
     src: url('../fonts/YearbookSolid.woff2') format('woff2'),
@@ -8,6 +9,7 @@
     font-weight: normal;
     font-style: normal;
 }
+
 body {
     background-color: #191919;
     font-family: "Inter", sans-serif;
@@ -21,7 +23,8 @@ body {
     box-sizing: border-box;
 }
 
-nav, ul {
+nav,
+ul {
     width: 100%;
     height: 10vh;
     display: flex;
@@ -33,7 +36,6 @@ nav, ul {
     padding-right: 4.5%;
     overflow-x: hidden;
     list-style-type: none
-
 }
 
 a {
@@ -49,10 +51,12 @@ a {
 li:hover {
     transform: scale(1.1);
 }
+
 a:hover {
     color: rgb(140, 247, 255);
-    
+
 }
+
 li {
     transition: transform 0.3s ease;
 }
@@ -63,7 +67,7 @@ li {
     margin-left: 20px;
 }
 
-.title{
+.title {
     width: 100%;
     height: 10vh;
     text-align: center;
@@ -72,81 +76,84 @@ li {
 }
 
 .title1 {
-    font-family: 'Yearbook Solid', sans-serif; 
-    text-align: center ;
+    font-family: 'Yearbook Solid', sans-serif;
+    text-align: center;
 }
 
 .item {
-height: 40vh;
-border-radius: 10%;
-background-color: #404040;
-padding: 0;
-display: flex;
-justify-content: center;
-align-items: center;
-flex-direction: column;
-margin: 0;
+    height: 40vh;
+    border-radius: 10%;
+    background-color: #404040;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 0;
 }
 
 .grids {
     width: 94%;
     display: grid;
-    grid-template-columns: 1fr;  /* se renderizaran 3 columnas ya que hay 3 valores, cada columna ocupa 1 fraccion, 1/3 (33,3% cada columna) se podria poner 33% 33% 33% por ejemplo
+    grid-template-columns: 1fr;
+    /* se renderizaran 3 columnas ya que hay 3 valores, cada columna ocupa 1 fraccion, 1/3 (33,3% cada columna) se podria poner 33% 33% 33% por ejemplo
                                     IMPORTANTE: EN ESTE CASO SE RENDERIZA 1 COLUMNA, PARA QUE SE RENDERIZEN 3 ESTA EL MEDIA QUERY PARA WIDTH MAYORE A 1200PX*/
 
-    gap: 20px; 
+    gap: 20px;
     border-radius: 5px;
     margin: 5px auto;
     box-sizing: border-box;
 }
+
 /*MEDIA QUERIES PARA QUE CUANDO EL ANCHO DE LA PANTALLA SEA MAS PEQUEÑO O GRANDE HAYA 1, 2 O 3 COLUMNAS EN EL GRID (ITEMS)*/
-@media (width > 700px ) {
+@media (width > 700px) {
     .grids {
-    width: 94%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+        width: 94%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
 
-    gap: 20px; 
-    border-radius: 5px;
-    margin: 5px auto;
-    box-sizing: border-box;
-}
+        gap: 20px;
+        border-radius: 5px;
+        margin: 5px auto;
+        box-sizing: border-box;
+    }
 }
 
-@media (width > 1200px ) {
+@media (width > 1200px) {
     .grids {
-    width: 94%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+        width: 94%;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
 
-    gap: 20px; 
-    border-radius: 5px;
-    margin: 5px auto;
-    box-sizing: border-box;
+        gap: 20px;
+        border-radius: 5px;
+        margin: 5px auto;
+        box-sizing: border-box;
+    }
 }
-}
- 
+
 /*GRID PARA LOS 2 ULTIMOS ELEMENTOS*/
 .grid2 {
     width: 94%;
     display: grid;
     grid-template-columns: 1fr;
-    gap: 20px; 
+    gap: 20px;
     border-radius: 5px;
     margin: 5px auto;
     box-sizing: border-box;
 }
-@media (width > 700px ) {
-    .grid2 {
-    width: 94%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
 
-    gap: 20px; 
-    border-radius: 5px;
-    margin: 5px auto;
-    box-sizing: border-box;
-}
+@media (width > 700px) {
+    .grid2 {
+        width: 94%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+
+        gap: 20px;
+        border-radius: 5px;
+        margin: 5px auto;
+        box-sizing: border-box;
+    }
 }
 
 
@@ -157,6 +164,7 @@ margin: 0;
 .item:hover {
     transform: scale(1.05);
 }
+
 .item {
     transition: transform 0.3s ease;
 }
@@ -164,6 +172,7 @@ margin: 0;
 .grid2 .item:hover {
     transform: scale(1.03);
 }
+
 .grid2 .item {
     margin-top: 10px;
     transition: transform 0.3s ease;
@@ -173,23 +182,26 @@ margin: 0;
 img:hover {
     transform: scale(1.05);
 }
+
 img {
     transition: transform 0.3s ease;
 }
 
 .nameAndPrice {
-    display: flex; 
-    align-items: center; 
+    display: flex;
+    align-items: center;
     justify-content: space-around;
     width: 100%;
 }
+
 .botones {
-    display: flex; 
-    align-items: space-around; 
+    display: flex;
+    align-items: space-around;
     justify-content: center;
     gap: 10%;
-    width: 100%;   
+    width: 100%;
 }
+
 button {
     border-radius: 15px;
     width: 50%;
@@ -204,35 +216,36 @@ button {
     font-family: "Montserrat";
 
 }
-button:hover{
+
+button:hover {
     background-color: rgb(80, 176, 255);
     color: white;
     font-weight: bold;
     transform: translateY(-2px);
-    cursor: pointer;    
+    cursor: pointer;
 }
 
 .shoppingcart {
-    position: absolute; 
-    right: 20%; 
+    position: absolute;
+    right: 20%;
     top: 15%;
     transform: translateY(-50%);
     overflow: hidden;
-  }
-  
-  .iconCart {
+}
+
+.iconCart {
     position: relative;
     display: flex;
     gap: 8px;
     transition: transform 0.3s ease, color 0.3s ease;
-  }
-  
-  .iconCart:hover {
+}
+
+.iconCart:hover {
     transform: scale(1.08);
     color: rgb(140, 247, 255);
     cursor: pointer;
-  }
-  
+}
+
 
 /*
 @media (min-width: 1024px) {
@@ -259,7 +272,9 @@ button:hover{
     }
 }*/
 
-/* 1. Estilos para la modal */
+/*
+ MODAL CARRITO
+*/
 .modal {
     display: none;
     position: fixed;
@@ -271,24 +286,56 @@ button:hover{
     z-index: 1000;
     justify-content: center;
     align-items: center;
-  }
-  .login-link {
+    overflow-x: none;
+}
+
+input::placeholder {
+    font-weight: 200;
+    font-size: .8rem;
+}
+
+.login-link {
     font-size: 1rem;
     text-decoration: underline;
     font-style: italic;
-    color:rgb(80, 176, 255);
+    color: rgb(80, 176, 255);
 }
 
 .login-link:hover {
     color: rgb(140, 247, 255);
 }
+#venta-form {
+    font-weight: 300;
+}
+.precio {
+    background-color: #383838;
+    border-radius: 20px;
+    width: 100%;
 
-  
-  #cart-toggle:checked ~ .modal {
+}
+.apartado-precio {
     display: flex;
-  }
-  
-  .modal-content {
+    gap: 70%;
+    margin-left: 20px;
+}
+.precio h1 {
+    margin-left: 20px;
+    padding-top: 20px;
+}
+hr {
+    width: 93%;
+}
+.precio h4 {
+    font-weight: 450;
+}
+.precio h3 {
+    width: 100px;
+}
+#cart-toggle:checked~.modal {
+    display: flex;
+}
+
+.modal-content {
     background: #191919;
     padding: 30px;
     border-radius: 10px;
@@ -298,23 +345,79 @@ button:hover{
     overflow-y: auto;
     position: relative;
     border: 2px solid rgb(0, 100, 180);
-  }
-  
-  .close-modal {
+    overflow-x: none;
+}
+
+.close-modal {
     position: absolute;
     top: 15px;
     right: 20px;
     font-size: 28px;
     cursor: pointer;
     color: white;
-  }
-  
-  .close-modal:hover {
+}
+
+.close-modal:hover {
     color: rgb(140, 247, 255);
-  }
-  
-  /* 2. Ajustes para el contador del carrito */
-  #cart-count {
+}
+#submitBtn {
+    margin-left: 140px;
+}
+label {
+    display: block;
+    margin-bottom: 8px;
+    font-size: 1rem;
+    font-weight: bold;
+    font-family: "Inter", sans-serif;
+}
+
+
+input {
+    width: 50%;
+    padding: 5px;
+    border: 2px solid #ecf0f1;
+    border-radius: 8px;
+    font-size: 1rem;
+    transition: all 0.3s;
+    font-weight: 600;
+    height: 10px;
+}
+
+
+input:focus {
+    border: 1px solid rgb(0, 100, 180);
+    box-shadow: 0 0 0 1.5px rgb(0, 100, 180);
+    outline: none;
+}
+
+select {
+    width: 90%;
+    padding: 5px;
+    border: 2px solid #ecf0f1;
+    border-radius: 8px;
+    font-size: 1rem;
+    transition: all 0.3s;
+    font-weight: 600;
+}
+
+
+select option {
+    color: white;
+    background-color: rgb(0, 100, 180);
+    padding: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: "Inter", sans-serif;
+}
+
+select:focus {
+    border: 1px solid rgb(140, 247, 255);
+    box-shadow: 0 0 0 1.5px rgb(140, 247, 255);
+    outline: none;
+}
+
+/* 2. Ajustes para el contador del carrito */
+#cart-count {
     background: rgb(140, 247, 255);
     color: black;
     border-radius: 50%;
@@ -323,19 +426,20 @@ button:hover{
     position: relative;
     top: -15px;
     right: 10px;
-  }
-  
-  /* 3. Media queries para la modal */
-  @media (max-width: 1024px) {
+}
+
+/* 3. Media queries para la modal */
+@media (max-width: 1024px) {
     .modal-content {
-      width: 95%;
-      padding: 20px;
+        width: 95%;
+        padding: 20px;
     }
-    
+
     .close-modal {
-      top: 10px;
-      right: 15px;
+        top: 10px;
+        right: 15px;
     }
+
     #cart-count {
         background: rgb(140, 247, 255);
         color: black;
@@ -345,11 +449,11 @@ button:hover{
         position: relative;
         top: -15px;
         right: -101px;
-      }
-  }
+    }
+}
 
-
-  footer {
+/*FOOTER*/
+footer {
     width: 100%;
     height: 10vh;
     display: flex;
@@ -358,19 +462,21 @@ button:hover{
     justify-content: center;
 
 }
+
 .icons {
     display: flex;
     justify-content: center;
     gap: 20px;
     align-items: center;
 }
+
 footer a:hover {
 
     transform: scale(1.05);
 }
 
 footer a:hover {
-transition: transform 0.3s ease;
+    transition: transform 0.3s ease;
 }
 
 
@@ -378,112 +484,116 @@ transition: transform 0.3s ease;
     background-color: rgb(0, 100, 180);
     padding: 10px;
     border-radius: 15px;
-    }
-    
-    .login:hover{
-        background-color: rgb(80, 176, 255);
-        color: white;
-        font-weight: bold;
-        transform: translateY(-2px);
-        cursor: pointer;    
-    }
+}
+
+.login:hover {
+    background-color: rgb(80, 176, 255);
+    color: white;
+    font-weight: bold;
+    transform: translateY(-2px);
+    cursor: pointer;
+}
 
 
 /*MEDIA QUERIIES PARA EL NAV Y TITULO EN MOVIL*/
 @media (max-width: 768px) {
-        /* Reducir el tamaño del título */
-        .title1 {
-            font-size: 1.5rem;
-            width: 70%;
-        }
-    
-        /* Reducir el tamaño de la barra de navegación */
-        nav, ul {
-            height: 8vh;
-            gap: 4%;
-            padding-right: 2%;
-        }
-    
-        a {
-            font-size: .8rem;
-            
-        }
 
-        .logoNav {
-            height: 60px;
-        }
-    
-        /* Ajustar la posición del carrito de compras */
-        .shoppingcart {
-            top: 15%; 
-            right: 8%; 
-        }
-    
-        #cart-count {
-            top: -10px; 
-            right: 5px;
-        }
+    /* Reducir el tamaño del título */
+    .title1 {
+        font-size: 1.5rem;
+        width: 70%;
     }
 
-
-    @media (max-width: 568px) {
-        a {
-            font-size: .8rem;
-            
-        }
-        .login {
-            padding: 4px;
-            font-size: .5rem;
-        }
+    /* Reducir el tamaño de la barra de navegación */
+    nav,
+    ul {
+        height: 8vh;
+        gap: 4%;
+        padding-right: 2%;
     }
 
+    a {
+        font-size: .8rem;
 
-    @media (max-width: 1020px) {
-        /* Reducir el tamaño del título */
-        .title1 {
-            font-size: 1.5rem;
-            width: 70%;
-        }
-    
-        /* Reducir el tamaño de la barra de navegación */
-        nav, ul {
-            height: 8vh;
-            gap: 4%;
-            padding-right: 2%;
-        }
-    
-        a {
-            font-size: .8rem;
-            
-        }
-
-        .logoNav {
-            height: 60px;
-        }
-    
-        /* Ajustar la posición del carrito de compras */
-        .shoppingcart {
-            top: 15%; 
-            right: 8%; 
-        }
-    
-        #cart-count {
-            top: -10px; 
-            right: 5px;
-        }
     }
 
-    @media (max-width: 1200px) {
-
-    
-         Ajustar la posición del carrito de compras 
-        .shoppingcart {
-            top: 15%; 
-            right: 8%; 
-        }
-    
-        #cart-count {
-            top: -10px; 
-            right: 5px;
-        }
+    .logoNav {
+        height: 60px;
     }
+
+    /* Ajustar la posición del carrito de compras */
+    .shoppingcart {
+        top: 15%;
+        right: 8%;
+    }
+
+    #cart-count {
+        top: -10px;
+        right: 5px;
+    }
+}
+
+
+@media (max-width: 568px) {
+    a {
+        font-size: .8rem;
+
+    }
+
+    .login {
+        padding: 4px;
+        font-size: .5rem;
+    }
+}
+
+
+@media (max-width: 1020px) {
+
+    /* Reducir el tamaño del título */
+    .title1 {
+        font-size: 1.5rem;
+        width: 70%;
+    }
+
+    /* Reducir el tamaño de la barra de navegación */
+    nav,
+    ul {
+        height: 8vh;
+        gap: 4%;
+        padding-right: 2%;
+    }
+
+    a {
+        font-size: .8rem;
+
+    }
+
+    .logoNav {
+        height: 60px;
+    }
+
+    /* Ajustar la posición del carrito de compras */
+    .shoppingcart {
+        top: 15%;
+        right: 8%;
+    }
+
+    #cart-count {
+        top: -10px;
+        right: 5px;
+    }
+}
+
+@media (max-width: 1200px) {
+
+
+    Ajustar la posición del carrito de compras .shoppingcart {
+        top: 15%;
+        right: 8%;
+    }
+
+    #cart-count {
+        top: -10px;
+        right: 5px;
+    }
+}
