--- a/styles/inscripciones.css
+++ b/styles/inscripciones.css
@@ -32,7 +32,12 @@ nav, ul {
     color: white;
     padding-right: 4.5%;
     overflow-x: hidden;
-    list-style-type: none
+    list-style-type: none;
+    position: sticky;
+    top: 0;
+    right: 0;
+    background-color: #191919;
+    z-index: 1001;
 
 }
 
