--- a/styles/about.css
+++ b/styles/about.css
@@ -23,7 +23,9 @@ body {
     box-sizing: border-box;
 
     }
-
+    .rights{
+        text-align: center;
+    }
 nav,
 ul {
     width: 100%;
@@ -90,6 +92,7 @@ li {
     justify-content: space-around;
     padding-top: 70px;
     overflow: hidden;
+    text-align: center;
 }
 
 
@@ -408,6 +411,7 @@ footer a:hover {
         height: 8vh;
         gap: 4%;
         padding-right: 2%;
+
     }
 
     a {
@@ -428,6 +432,18 @@ footer a:hover {
     iframe {
         width: 100%;
         height: 230px;
+    }
+    .logoNav {
+        height: 50px;
+        position: relative;
+        left: -7%;
+    }
+    .team {
+        height: 190vh;
+    }
+    .carrusel {
+        width: 70%;
+        height: 100vh;
     }
 }
 
