--- a/styles/login.css
+++ b/styles/login.css
@@ -137,50 +137,71 @@ button:hover {
 
 /*Ull per veure contrassenya*/
 .toggle-password {
- background-color: transparent;
- width: 25px;
- padding: 0;
-position: fixed;
-top: 54%;
-left: 57%;
-z-index: 1004;
+    background-color: transparent;
+    width: 25px;
+    padding: 0;
+    position: fixed;
+    top: 53.9%;
+    left: 57%;
+    z-index: 1004;
 }
+
 .toggle-password-register {
     background-color: transparent;
     width: 25px;
     padding: 0;
-   position: fixed;
-   top: 57.5%;
-   left: 57%;
-   z-index: 1004;
+    position: absolute;
+    top: 57.8%;
+    left: 57%;
+    z-index: 1004;
 }
-   
 
 
-.toggle-password:hover, .toggle-password-register:hover {
+
+.toggle-password:hover,
+.toggle-password-register:hover {
     background-color: transparent;
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .toggle-password {
         background-color: transparent;
         width: 25px;
         padding: 0;
-       position: fixed;
-       top: 54%;
-       left: 69%;
-       z-index: 1004;
-       }
-       .toggle-password-register {
+        position: absolute;
+        top: 54.8%;
+        left: 78%;
+        z-index: 1004;
+    }
+
+    .toggle-password-register {
         background-color: transparent;
         width: 25px;
         padding: 0;
-       position: fixed;
-       top: 57.5%;
-       left: 69%;
-       z-index: 1004;
+        position: absolute;
+        top: 59.1%;
+        left: 78%;
+        height: 1.2rem;
+        z-index: 1004;
     }
-       
+
+
+}
+
+
+.arrow {
+    position: fixed;
+    top: 5%;
+    left: 5%;
+    padding: 10px;
+}
+
+
+.arrow:hover {
+    cursor: pointer;
+    color: rgb(140, 247, 255);
+    transform: scale(1.1);
+    transition: transform 0.3s ease-in-out;
 
 }
