--- a/styles/about.css
+++ b/styles/about.css
@@ -241,6 +241,8 @@ footer a:hover {
 
 /* NUESTRO EQUIPO */
 .team {
+        position: relative;
+    z-index: 1;
     width: 100vw;
     min-height: 70vh;
     margin: 0;
@@ -262,7 +264,8 @@ footer a:hover {
     margin-bottom: 30px;
 }
 
-.profesores {       
+.profesores {      
+    position: relative;  
     display: grid;
     grid-template-columns: 1fr 1fr; 
     gap: 30px;
@@ -270,6 +273,7 @@ footer a:hover {
 
 .profesorCard {
     position: relative;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -299,17 +303,20 @@ footer a:hover {
     opacity: 0;
     visibility: hidden;
     transition: all 0.3s ease;
-    z-index: 0;
+    z-index: 10;
     margin-top: 15px;
     box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+    z-index: 10;
 }
 
 .profesorCard:hover .profesorInfo {
     opacity: 1;
     visibility: visible;
-    z-index: 999;
+    z-index: 10;
 }
-
+.profesorCard:hover {
+    z-index: 50;
+}
 .profesorCard:hover img {
     transform: scale(1.1);
 }
@@ -366,7 +373,8 @@ footer a:hover {
 
 
 .callToAction {
-    margin-top: 5%;
+    position: relative;
+    margin-top: 11%;
     border-radius: 20px;
     background-color: rgb(0, 100, 180);
     color: white;
@@ -375,6 +383,7 @@ footer a:hover {
     font-size: 1.1rem;
     font-family: "Montserrat";
     padding: 15px;
+    z-index: 2;
 }
 
 .callToAction:hover {
@@ -484,4 +493,11 @@ footer a:hover {
 
         border-radius: 8px;
     }
+}
+
+
+@media (max-width: 1105px) {
+    a.login {
+         background-color: transparent;
+    } 
 }
