--- a/styles/styles.css
+++ b/styles/styles.css
@@ -222,3 +222,11 @@ border-radius: 15px;
         border-radius: 8px;
     }
 }
+
+
+
+@media (max-width: 1105px) {
+    a.login {
+         background-color: transparent;
+    } 
+}
