--- a/styles/inscripciones.css
+++ b/styles/inscripciones.css
@@ -396,4 +396,7 @@ textarea:focus {
     a.login {
          background-color: transparent;
     } 
+    #userMenu {
+        margin-right: -85px;
+    }
 }
