--- a/styles/about.css
+++ b/styles/about.css
@@ -500,4 +500,7 @@ footer a:hover {
     a.login {
          background-color: transparent;
     } 
+    #userMenu {
+        margin-right: -85px;
+    }
 }
