--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,7 +64,7 @@ nav, ul {
     font-family: "Inter", sans-serif;
     color: white;
     padding-right: 4.5%;
-    overflow-x: hidden;
+    overflow-x: auto;
     list-style-type: none;
     position: sticky;
     top: 0;
