--- a/styles/store.css
+++ b/styles/store.css
@@ -34,7 +34,7 @@ ul {
     font-family: "Inter", sans-serif;
     color: white;
     padding-right: 4.5%;
-    overflow-x: hidden;
+    overflow-x: auto;
     list-style-type: none;
     background-color: #191919;
     z-index: 1001;
