--- a/styles/inscripciones.css
+++ b/styles/inscripciones.css
@@ -31,7 +31,7 @@ nav, ul {
     font-family: "Inter", sans-serif;
     color: white;
     padding-right: 4.5%;
-    overflow-x: hidden;
+    overflow-x: auto;
     list-style-type: none;
     position: sticky;
     top: 0;
