--- a/styles/about.css
+++ b/styles/about.css
@@ -262,6 +262,7 @@ footer a:hover {
     font-size: 45px;
     color: white;
     margin-bottom: 30px;
+    text-align: center;
 }
 
 .profesores {      
