--- a/styles/about.css
+++ b/styles/about.css
@@ -255,6 +255,7 @@ footer a:hover {
     padding-top: 71px;
     overflow: hidden;
     background-color: #191919; /* Eliminado el aquamarine */
+    text-align: center;
 }
 
 .team h1 {
